--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -166,10 +166,6 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3T9-K5-X5I" customClass="FBProfilePictureView">
-                                <rect key="frame" x="150" y="341" width="300" height="195"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -197,7 +193,6 @@
                         <outlet property="inputBG" destination="YYp-Lu-jru" id="Bw3-rw-aAs"/>
                         <outlet property="nameField" destination="jyI-Jb-6zF" id="2JH-B7-UNe"/>
                         <outlet property="nameHeading" destination="ExF-1v-CZA" id="J5c-Z8-Al5"/>
-                        <outlet property="profPic" destination="3T9-K5-X5I" id="EeS-s5-wWF"/>
                         <outlet property="pwField" destination="qJQ-om-phK" id="HZh-0e-VSM"/>
                         <outlet property="pwHeading" destination="fZb-nK-Ez4" id="Xt4-uF-Pme"/>
                         <outlet property="signInBtn" destination="M2k-Q1-TKM" id="zbL-Jo-o89"/>
@@ -744,6 +739,7 @@
                         <segue destination="9HI-6j-g6Y" kind="show" identifier="presentProfile" id="NIe-HK-wbH"/>
                         <segue destination="GCW-6Z-dMB" kind="show" identifier="presentAbout" id="YDc-Zs-ygh"/>
                         <segue destination="WNj-zI-suc" kind="show" identifier="presentSettings" id="ipi-lh-Ijg"/>
+                        <segue destination="dzH-Kb-FUl" kind="show" identifier="presentMyPosts" id="hQN-2J-Iwr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBX-1g-wYc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1006,13 +1002,70 @@
             </objects>
             <point key="canvasLocation" x="2505" y="-1143"/>
         </scene>
+        <!--My Posts View Controller-->
+        <scene sceneID="5FF-jg-HLQ">
+            <objects>
+                <viewController id="dzH-Kb-FUl" customClass="MyPostsViewController" customModule="Pixie" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="H2c-QX-JyI"/>
+                        <viewControllerLayoutGuide type="bottom" id="GcV-Wu-Smo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="A1S-DU-sqI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D68-aP-isN">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
+                                <color key="backgroundColor" red="0.0" green="0.58823529409999997" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <navigationBar opaque="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRh-Nc-jQT">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="barTintColor" red="0.0" green="0.58823529409999997" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="textShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="My Posts" id="6f5-xf-jdO">
+                                        <barButtonItem key="leftBarButtonItem" image="menu" id="Hak-p6-dFL">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <connections>
+                                                <segue destination="Sik-hd-hg0" kind="custom" identifier="presentNav" id="rDY-9Y-l7X"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wRh-Nc-jQT" firstAttribute="leading" secondItem="D68-aP-isN" secondAttribute="leading" id="IxH-KF-nSq"/>
+                            <constraint firstItem="wRh-Nc-jQT" firstAttribute="top" secondItem="D68-aP-isN" secondAttribute="bottom" id="KS4-qa-cXm"/>
+                            <constraint firstItem="wRh-Nc-jQT" firstAttribute="leading" secondItem="A1S-DU-sqI" secondAttribute="leading" id="NYy-MG-haE"/>
+                            <constraint firstItem="wRh-Nc-jQT" firstAttribute="top" secondItem="D68-aP-isN" secondAttribute="bottom" id="Vv6-kp-H5c"/>
+                            <constraint firstAttribute="trailing" secondItem="wRh-Nc-jQT" secondAttribute="trailing" id="cAs-Jk-hhF"/>
+                            <constraint firstItem="D68-aP-isN" firstAttribute="trailing" secondItem="wRh-Nc-jQT" secondAttribute="trailing" id="cQx-36-15i"/>
+                            <constraint firstItem="D68-aP-isN" firstAttribute="top" secondItem="A1S-DU-sqI" secondAttribute="top" id="iZo-BY-7tl"/>
+                            <constraint firstItem="wRh-Nc-jQT" firstAttribute="top" secondItem="H2c-QX-JyI" secondAttribute="bottom" id="oIs-tC-sxQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="NIJ-xE-niV"/>
+                    <connections>
+                        <outlet property="navBar" destination="wRh-Nc-jQT" id="MgC-sT-2yD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ect-cX-t0L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2505" y="1065"/>
+        </scene>
     </scenes>
     <resources>
         <image name="add" width="30" height="30"/>
         <image name="menu" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="QXm-KY-6G3"/>
-        <segue reference="rAo-kp-Ahx"/>
+        <segue reference="g2g-SF-d2k"/>
+        <segue reference="rDY-9Y-l7X"/>
     </inferredMetricsTieBreakers>
 </document>
